# tfchain_tft_bridge

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  vesting-spec.md
bridge/: Cargo.toml
bridge/src/: bridge.rs  cli.rs  lib.rs  main.rs
docs/: development.md  multinode.md  single_node.md
pallet-tft-bridge/: Cargo.lock.bak1  Cargo.toml  spec.md
pallet-tft-bridge/src/: lib.rs  libb.rs  migration_burn_withdraw.rs  mock.rs  tests.rs  types.rs
pallet-tft-bridge/src/migrations/: types.rs  v2.rs
pallet-tft-price/: Cargo.toml  readme.md
pallet-tft-price/src/: lib.rs
pallet-vesting/: Cargo.toml  README.md
pallet-vesting/src/: lib.rs  weights.rs
specs/: bridge.md  vesting-spec.md
tfchain_bridge/: go.mod  go.sum  main.go  node.json  readme.md  transfers.md
tfchain_bridge/chart/tfchainbridge/: Chart.yaml  values.yaml
tfchain_bridge/chart/tfchainbridge/templates/: deployment.yaml
tfchain_bridge/frontend/: .dockerignore  .env  Caddyfile  Dockerfile  package.json
tfchain_bridge/frontend/helm/tfchainbridgeui/: Chart.yaml  values.yaml
tfchain_bridge/frontend/helm/tfchainbridgeui/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
tfchain_bridge/frontend/public/: env.js  index.html
tfchain_bridge/frontend/src/: App.css  App.js  config.js  connect.js  index.js
tfchain_bridge/frontend/src/components/: deposit.js  withdraw.js
tfchain_bridge/pkg/: config.go  persistency.go
tfchain_bridge/pkg/bridge/: bridge.go  mint.go  refund.go  withdraw.go
tfchain_bridge/pkg/stellar/: stellar.go  transaction_storage.go
tfchain_bridge/pkg/substrate/: account.go  blocks.go  bridge.go  burning.go  client.go  depositfee.go  events.go  minting.go  refunds.go  signing.go  substrate.go  tfchainerrors.go  utils.go
tfchain_bridge/substrate-bridge/: .env  package.json
tfchain_bridge/substrate-bridge/public/: env.js
tfchain_bridge/substrate-bridge/src/: App.css  App.js  connect.js
tfchain_bridge/substrate-bridge/src/components/: withdraw.js
tfchain_bridge/tools/eventParser/: main.go
tfchain_bridge/tools/keygen/: main.go
tft-substrate-node/: README.md  docker-compose.yml
tft-substrate-node/.devcontainer/: devcontainer.json
tft-substrate-node/node/: Cargo.toml
tft-substrate-node/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
tft-substrate-node/pallets/template/: Cargo.toml
tft-substrate-node/runtime/: Cargo.toml
tft-substrate-node/runtime/src/: lib.rs
tft-substrate-node/scripts/: docker_run.sh
