[package]
name = "bridge-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3.23"
tracing-subscriber = "0.3.15"
futures = "0.3.23"
clap = { version = "3", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4"
subxt = "0.23.0"
hex = "0.4.3"
tfchain-client = { path = "/home/dylan/Projects/tfchain-client" }