[package]
authors = ['Threefoldfoundation <https://github.com/threefoldfoundation>']
description = 'TFT Price fetching pallet'
edition = '2018'
homepage = 'threefold.io'
license = 'Apache 2.0'
name = 'pallet-tft-price'
repository = 'https://github.com/threefoldfoundation/tft-parity'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
package = "substrate-fixed"
# rev = "310e0d3a4c498b16ab7f790e99bbf6cf06e87a43"

[dependencies]
# Substrate packages

balances = { package = 'pallet-balances', version = '3.0.0', default-features = false }
frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false }
sp-core = { version = '3.0.0', default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }
sp-std = { version = '3.0.0', default-features = false }
sp-storage = { version = '3.0.0', default-features = false }
pallet-timestamp = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }
lite-json = { version = "0.1.3", default-features = false }

[dev-dependencies]
sp-core = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }

[features]
default = ['std']
std = [
	'balances/std',
	'frame-support/std',
	'frame-system/std',
	'codec/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-storage/std',
    'pallet-timestamp/std',
	'sp-io/std',
	'lite-json/std',
]