[package]
authors = ['Threefoldfoundation <https://github.com/threefoldfoundation>']
description = 'TFT Price fetching pallet'
edition = '2018'
homepage = 'threefold.io'
license = 'Apache 2.0'
name = 'pallet-tft-price'
repository = 'https://github.com/threefoldfoundation/tft-parity'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
package = "substrate-fixed"

[dependencies]
parity-scale-codec = { version = '2.0', default-features = false, features = ['derive'] }
parking_lot = '0.11'
serde = { version = '1.0.100', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }

# Substrate packages
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-arithmetic = { version = '3.0', default-features = false }
sp-core = { version = '3.0', default-features = false }
sp-io = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }
sp-keystore = { version = '0.9', optional = true }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-keystore',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-arithmetic/std',
	'sp-keystore/std',
]