[package]
name = 'pallet-vesting'
authors = ['ThreefoldFoundation <https://github.com/threefoldfoundation>']
description = 'TFT veting pallet'
edition = '2018'
homepage = 'threefold.io'
license = 'Apache 2.0'
repository = 'https://github.com/threefoldfoundation/tft-parity'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
package = "substrate-fixed"
rev = "310e0d3a4c498b16ab7f790e99bbf6cf06e87a43"

[dependencies.pallet-tft-price-oracle]
default-features = false
# path = "../pallet-tft-price"
git = "https://github.com/threefoldfoundation/tft-parity"
branch = "main"
package = "pallet-tft-price-oracle"

[dependencies]
# Substrate packages
frame-system = { version = '2.0.1', default-features = false }
serde = { version = "1.0.101", optional = true }
enumflags2 = { version = "0.6.2" }
pallet-balances = { package = 'pallet-balances', version = '2.0.1', default-features = false }
frame-support = { version = '2.0.1', default-features = false }
sp-core = { version = '2.0.1', default-features = false }
sp-runtime = { version = '2.0.1', default-features = false }
sp-std = { version = '2.0.1', default-features = false }
sp-storage = { version = '2.0.1', default-features = false }
pallet-timestamp = { version = '2.0.1', default-features = false }
sp-io = { version = '2.0.1', default-features = false }
hex = { version = "0.4", default-features = false }
lite-json = { version = "0.1.3", default-features = false }
frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }

[dev-dependencies]
sp-core = { version = '2.0.1', default-features = false }
sp-io = { version = '2.0.1', default-features = false }
hex-literal = "0.3.1"

[features]
default = ['std']
std = [
	'serde',
	'pallet-balances/std',
	'frame-support/std',
	'frame-system/std',
	'codec/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-storage/std',
    'pallet-timestamp/std',
	'sp-io/std',
	'lite-json/std',
	'pallet-tft-price-oracle/std',
]
runtime-benchmarks = ["frame-benchmarking"]
